compiler/zeque_ast/src/snapshots/sig_ast__ast_to_hir__tests__field_decl.snap
---
source: compiler/sig_ast/src/ast_to_hir.rs
expression: "parse(stringify!(a: i32,))"
---
File {
    struct_idx: 0,
    ctx: Ctx {
        params: [],
        exprs: [
            Name(
                BuiltinType(
                    I32,
                ),
            ),
        ],
        lets: [],
        structs: [
            Struct {
                fns: [],
                fields: [
                    FieldDecl {
                        name: "a",
                        ty: 0,
                    },
                ],
            },
        ],
    },
}
