compiler/zeque_ast/src/snapshots/sig_ast__ast_to_hir__tests__function_call.snap
---
source: compiler/sig_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn main() i32 { foo() } fn foo() i32 { 1 }))"
---
File {
    struct_idx: 0,
    ctx: Ctx {
        params: [],
        exprs: [],
        lets: [],
        structs: [
            Struct {
                fns: [
                    FnDecl {
                        is_pub: false,
                        name: "main",
                        params: [],
                        return_ty: 0,
                        body: Block {
                            stmts: [],
                            returns: 2,
                        },
                        ctx: Ctx {
                            params: [],
                            exprs: [
                                Name(
                                    BuiltinType(
                                        I32,
                                    ),
                                ),
                                Name(
                                    Local(
                                        Local {
                                            level: 0,
                                            kind: Fn(
                                                0,
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                                Call {
                                    callee: Expr(
                                        1,
                                    ),
                                    args: [],
                                },
                            ],
                            lets: [],
                            structs: [],
                        },
                    },
                    FnDecl {
                        is_pub: false,
                        name: "foo",
                        params: [],
                        return_ty: 0,
                        body: Block {
                            stmts: [],
                            returns: 1,
                        },
                        ctx: Ctx {
                            params: [],
                            exprs: [
                                Name(
                                    BuiltinType(
                                        I32,
                                    ),
                                ),
                                Int(
                                    1,
                                ),
                            ],
                            lets: [],
                            structs: [],
                        },
                    },
                ],
                fields: [],
            },
        ],
    },
}
