compiler/zeque_ast/src/snapshots/sig_ast__ast_to_hir__tests__if_then_else.snap
---
source: compiler/sig_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn main() i32 { if true { 1 } else { 0 } }))"
---
File {
    struct_idx: 0,
    ctx: Ctx {
        params: [],
        exprs: [],
        lets: [],
        structs: [
            Struct {
                fns: [
                    FnDecl {
                        is_pub: false,
                        name: "main",
                        params: [],
                        return_ty: 0,
                        body: Block {
                            stmts: [],
                            returns: 4,
                        },
                        ctx: Ctx {
                            params: [],
                            exprs: [
                                Name(
                                    BuiltinType(
                                        I32,
                                    ),
                                ),
                                Bool(
                                    true,
                                ),
                                Int(
                                    1,
                                ),
                                Int(
                                    0,
                                ),
                                IfThenElse {
                                    cond: 1,
                                    then: 2,
                                    else_: 3,
                                },
                            ],
                            lets: [],
                            structs: [],
                        },
                    },
                ],
                fields: [],
            },
        ],
    },
}
