compiler/zeque_ast/src/snapshots/sig_ast__ast_to_hir__tests__nested_ctxs.snap
---
source: compiler/sig_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn foo() type { struct { fn bar() type { i32 } } }))"
---
File {
    struct_idx: 0,
    ctx: Ctx {
        params: [],
        exprs: [],
        lets: [],
        structs: [
            Struct {
                fns: [
                    FnDecl {
                        is_pub: false,
                        name: "foo",
                        params: [],
                        return_ty: 0,
                        body: Block {
                            stmts: [],
                            returns: 1,
                        },
                        ctx: Ctx {
                            params: [],
                            exprs: [
                                Name(
                                    BuiltinType(
                                        Type,
                                    ),
                                ),
                                Struct(
                                    0,
                                ),
                            ],
                            lets: [],
                            structs: [
                                Struct {
                                    fns: [
                                        FnDecl {
                                            is_pub: false,
                                            name: "bar",
                                            params: [],
                                            return_ty: 0,
                                            body: Block {
                                                stmts: [],
                                                returns: 1,
                                            },
                                            ctx: Ctx {
                                                params: [],
                                                exprs: [
                                                    Name(
                                                        BuiltinType(
                                                            Type,
                                                        ),
                                                    ),
                                                    Name(
                                                        BuiltinType(
                                                            I32,
                                                        ),
                                                    ),
                                                ],
                                                lets: [],
                                                structs: [],
                                            },
                                        },
                                    ],
                                    fields: [],
                                },
                            ],
                        },
                    },
                ],
                fields: [],
            },
        ],
    },
}
