compiler/zeque_ast/src/snapshots/sig_ast__ast_to_hir__tests__struct_def.snap
---
source: compiler/sig_ast/src/ast_to_hir.rs
expression: "parse(stringify!(a: struct { b: i32, },))"
---
File {
    struct_idx: 0,
    ctx: Ctx {
        params: [],
        exprs: [
            Name(
                BuiltinType(
                    I32,
                ),
            ),
            Struct(
                1,
            ),
        ],
        lets: [],
        structs: [
            Struct {
                fns: [],
                fields: [
                    FieldDecl {
                        name: "a",
                        ty: 1,
                    },
                ],
            },
            Struct {
                fns: [],
                fields: [
                    FieldDecl {
                        name: "b",
                        ty: 0,
                    },
                ],
            },
        ],
    },
}
